fix z-index

--- a/app/assets/stylesheets/jquery.bxslider.css
+++ b/app/assets/stylesheets/jquery.bxslider.css
@@ -123,7 +123,7 @@
   width: 50px;
   height: 50px;
   text-indent: -9999px;
-  z-index: 9999;
+  z-index: 99;
   /*background: #053047;*/
 }
 
